src/test/ui/feature-gates/feature-gate-crate_visibility_modifier.stderr
error[E0658]: `crate` visibility modifier is experimental (see issue #53120)
  --> $DIR/feature-gate-crate_visibility_modifier.rs:1:1
   |
LL | crate struct Bender { //~ ERROR `crate` visibility modifier is experimental
   | ^^^^^
   |
   = help: add #![feature(crate_visibility_modifier)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
